- Bugfix: SplitCheckBox was checked when coming from Setup (Closes #377).
- Bugfix: Entering a QRZ cleared the DX Gridsquare if it was previously entered (Closes #357).
- Bugfix: Imported QSOs add the default electronic QSL send info if configured.
- Bugfix: DXCC widget shows last Entity status after modifying a QSO (Closes #412).
- Bugfix: Hamlib is now stopped while editing a QSO (Closes #414).
- New feature: Added a Manual Mode checkbox to disable quickly hamlib & wsjtx integration.
- New feature: Added "Save" and "Cancel" button when editing a recorded QSO.
Update: Developers mailing list address changed to klog@groups.io (Closes #421).

Jan 2022 - 1.8.6
- Bugfix: Net rig & FLRig hamlib connections were not working propertly. (Closes #339) (TNX W5PNY)
- Bugfix: Some prefixes were not properly detected. (Closes #371) (Closes #367).
- Bugfix: Serial Hamlib rigs were not properly working. (TNX W5PNY)
- Bugfix: QRZ.com was disabled if user was not subscribed. (TNX EA5WA)
- Bugfix: QRZ.com data was not updated if the boxes were already filled. (TNX EA5WA)
- Bugfix: Callsigns formet were not always properly checked.
- Improvement: Hamlib 4.4 in binary packages (macOS & Windows) tested also in Linux.
- Improvement: RTS & DTR are defined to OFF by default in hamlib.
- Improvement:KLog differenciates QRZ.com subcribed users from non subscribed. (TNX EA5WA)

Oct 2021 - 1.8.5
- Bugfix: Station callsign was not shown on window title. (Closes #347)
- Bugfix: Received QSOs from LoTW were shown as to be sent. (Closes #358)
- Bugfix: Log was not properly ordered. (Closes #346) (TNX EA5WA)
- Improvement: Message of the mainwindow has been updated. (Closes #361)
- Improvement: Logs to be uploaded to LoTW are only shown from the current log. (Closes #362)
- Improvement: Logs to be uploaded to ClubLog are only shown from the current log. (Closes #363)
- New feature: It is now possible to enable/disable the callsign check. (Closes #186)
- Removed dead & commented code.