@@ -57,6 +57,7 @@ public:
     void setReadOnly(const QString &_m);
     void setRadioNetworkAddress(const QString &_m);
     void setRadioNetworkPort(const int _p);
+    void stopHamlib();
 
 public slots:
     //void slotScanPorts();
